# corona-accountBook

./: .dockerignore  .gitignore  .gitmessage.txt  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.dev.yml  pyproject.toml
.github/workflows/: build.yml  checks.yml  ci.yml  deploy.yml
account/: models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py
analysis/: analyzers.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
analysis/migrations/: 0001_initial.py
categories/: models.py
category/: models.py
category/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
config/services/: category_classifier.py  category_keywords.py
config/settings/: base.py  dev.py  prod.py
notification/: models.py  serializers.py  urls.py  views.py
notification/migrations/: 0001_initial.py
schedule/: models.py  services.py
schedule/migrations/: 0001_initial.py
scripts/: run.sh
transaction/: models.py  serializers.py  services.py  urls.py  views.py
transaction/migrations/: 0001_initial.py
user/: admin.py  authentication.py  models.py  serializers.py  tokens.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_is_active.py
