[project]
name = "corona-account-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "docker>=7.1.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
